<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/relativeLayout">
    <android.support.v7.widget.AppCompatImageView
            android:layout_width="0dp"
            android:id="@+id/logo"
            android:contentDescription="@string/logo"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toTopOf="@+id/video"
            app:layout_constraintEnd_toStartOf="@+id/search"
            app:layout_constraintHorizontal_chainStyle="spread_inside" app:layout_constraintHorizontal_weight="0.15"
            app:layout_constraintVertical_chainStyle="spread_inside" app:layout_constraintVertical_weight="0.2"
            app:srcCompat="@drawable/coretronic" android:backgroundTintMode="src_over"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:focusable="true" android:focusableInTouchMode="true"
            android:id="@+id/search" android:autofillHints=""
            android:hint="@string/what_you_want" tools:targetApi="o"
            android:textSize="14sp" app:layout_constraintBottom_toBottomOf="@+id/logo"
            app:layout_constraintStart_toEndOf="@+id/logo" app:layout_constraintBottom_toTopOf="@+id/video"
            app:layout_constraintEnd_toStartOf="@+id/search_btn"
            app:layout_constraintHorizontal_chainStyle="spread_inside" app:layout_constraintHorizontal_weight="0.6"
            app:layout_constraintVertical_chainStyle="spread_inside" app:layout_constraintVertical_weight="0.2"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/search_btn"
            android:layout_width="0dp" app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:layout_height="wrap_content" android:id="@+id/search_btn"
            android:textSize="16sp" app:layout_constraintTop_toTopOf="@+id/search"
            app:layout_constraintBottom_toBottomOf="@+id/search" app:layout_constraintStart_toEndOf="@+id/search"
            app:layout_constraintEnd_toStartOf="@+id/status" app:layout_constraintHorizontal_weight="0.15"
            android:background="@drawable/btn_selector"/>
    <TextView
            android:text="@string/disconnect"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/status"
            android:gravity="center" android:textSize="12sp"
            android:focusable="true" app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/search_btn" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/history_textView" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_weight="0.25"
            app:layout_constraintVertical_chainStyle="spread_inside" app:layout_constraintVertical_weight="0.2"/>
    <ListView
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/result_list"
            app:layout_constraintTop_toBottomOf="@+id/history_textView"
            app:layout_constraintStart_toStartOf="@+id/history_list" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/history_list" android:visibility="invisible"/>
    <TextView
            android:text="@string/search_result"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/search_result" android:textSize="12sp"
            android:gravity="center"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/status" app:layout_constraintStart_toEndOf="@+id/video"
            app:layout_constraintEnd_toEndOf="@+id/status" app:layout_constraintBottom_toTopOf="@+id/result_list"
            android:background="@android:color/holo_orange_dark"/>
    <com.google.android.youtube.player.YouTubePlayerView
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/video"
            app:layout_constraintVertical_chainStyle="spread_inside" app:layout_constraintVertical_weight="0.8"
            app:layout_constraintTop_toBottomOf="@+id/search"
            app:layout_constraintEnd_toEndOf="@+id/search_btn" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/history"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/history_textView" android:textSize="12sp"
            android:gravity="center"
            app:layout_constraintVertical_chainStyle="spread_inside" app:layout_constraintVertical_weight="0.1"
            app:layout_constraintTop_toBottomOf="@+id/status"
            app:layout_constraintStart_toEndOf="@+id/video" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/history_list"
            android:background="@color/colorAccent"/>
    <ListView
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/history_list"
            app:layout_constraintVertical_chainStyle="spread_inside" app:layout_constraintVertical_weight="0.7"
            app:layout_constraintStart_toEndOf="@+id/video" app:layout_constraintTop_toBottomOf="@id/history_textView"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>